--- a/CollisionDetector.vcxproj
+++ b/CollisionDetector.vcxproj
@@ -121,11 +121,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Collision.cpp" />
     <ClCompile Include="FPSCounter.cpp" />
+    <ClCompile Include="GiftWrapping.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Collision.h" />
     <ClInclude Include="FPSCounter.h" />
+    <ClInclude Include="GiftWrapping.h" />
     <ClInclude Include="Triangle.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
